--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.1.0",
     "@web3-storage/w3up-client": "^17.1.0",
     "ethers": "^6.13.4"
   }
